--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/jamalex/notion-py.git
+git+https://github.com/bkraeling/notion-py.git
 flake8==3.7.7
 Flask==1.0.3
 gunicorn==19.9.0
